metadata1/unpackaged/objects/Budget_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Costs__c</fullName>
        <formula>IF(AND(Subcontractor_bid__c = 0,  In_House_Total__c  = 0,  Materials__c = 0), Subcontractor_bid__c  +  In_House_Total__c  +  Materials__c, Subcontractor_bid__c  +  In_House_Total__c  +  Materials__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocation_Amount__c</fullName>
        <description>This will bring the value of allocation formula so we can use it on Subtotal Rollup summary.</description>
        <label>Allocation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocation_Overhead__c</fullName>
        <formula>TEXT(Budget__r.Allocation_Overhead__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocation Overhead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allocation_Percentage__c</fullName>
        <formula>CASE(Allocation_Overhead__c, &quot;1/1&quot;, (1/10)/1000, &quot;2/2&quot;, (2/10)/1000, &quot;3/3&quot;, (3/10)/1000, &quot;4/4&quot;, (4/10)/1000, &quot;5/5&quot;, (5/10)/1000, &quot;6/6&quot;, (6/10)/1000, &quot;7/7&quot;, (7/10)/1000, &quot;8/8&quot;, (8/10)/1000, &quot;9/9&quot;, (9/10)/1000, &quot;10/10&quot;, 1/1000, &quot;10/5&quot;,1.5/1000 ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocation Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allocations__c</fullName>
        <formula>Revenue__c  *  VALUE(TEXT(Budget__r.Allocations__c)) / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BlankValue__c</fullName>
        <label>BlankValue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0/0</fullName>
                    <default>true</default>
                    <label>0/0</label>
                </value>
                <value>
                    <fullName>1/1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Goal_Amount__c</fullName>
        <description>This will bring the value of budget goal formula so we can use it on Rollup summary.</description>
        <label>Budget Goal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Goal__c</fullName>
        <description>Revenue minus selected budget goal, minus selected allocations, minus selected program fees, plus 20% if using 10/10 allocations</description>
        <formula>Revenue__c - 

(Revenue__c*(VALUE(TEXT( Budget__r.GP_Goal__c))/100)) - 

(Revenue__c*(VALUE(TEXT(Budget__r.Allocations__c))/100)) - 

(Revenue__c*(VALUE(TEXT(Budget__r.X3_Program_Fees__c))/100)) + 



(IF(X10_10_Allocation__c == true, 0.2*(Revenue__c - 

(Revenue__c*(VALUE(TEXT( Budget__r.GP_Goal__c))/100)) - 

(Revenue__c*(VALUE(TEXT(Budget__r.Allocations__c))/100)) - 

(Revenue__c*(VALUE(TEXT(Budget__r.X3_Program_Fees__c))/100))), 

0) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <referenceTo>Budget__c</referenceTo>
        <relationshipLabel>Budget Line Items</relationshipLabel>
        <relationshipName>Budget_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Burden__c</fullName>
        <formula>(In_House_Rate__c  * 0.2)  *  In_House_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Burden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fees__c</fullName>
        <label>Fees</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Profit__c</fullName>
        <formula>Profit__c  /  Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>In_House_Hours__c</fullName>
        <label>In-House Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_House_Rate__c</fullName>
        <label>In-House Rate</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>In_House_Total__c</fullName>
        <formula>(In_House_Hours__c  *  In_House_Rate__c  ) + Burden__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In-House Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Materials__c</fullName>
        <label>Materials</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <description>This is kept for cloning purposes</description>
        <label>OrderNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <formula>Revenue__c  -  Actual_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Fee_Amount__c</fullName>
        <description>This will bring the value of program fees formula so we can use it on Rollup summary.</description>
        <label>Program Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Fees__c</fullName>
        <formula>Revenue__c * VALUE(TEXT(Budget__r.X3_Program_Fees__c )) / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subcontractor__c</fullName>
        <label>Subcontractor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcontractor_bid__c</fullName>
        <label>Subcontractor bid</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_Option__c</fullName>
        <label>Trade Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACT Acoustical Treatments</fullName>
                </value>
                <value>
                    <fullName>APP Appliances</fullName>
                </value>
                <value>
                    <fullName>AWN Awnings &amp; Patio Covers</fullName>
                </value>
                <value>
                    <fullName>CAB Cabinetry</fullName>
                </value>
                <value>
                    <fullName>CLN Cleaning</fullName>
                </value>
                <value>
                    <fullName>CNC/MAS Concrete/Masonary</fullName>
                </value>
                <value>
                    <fullName>CON Contents</fullName>
                </value>
                <value>
                    <fullName>CPS Contents: Packaging, Handling, and Storage</fullName>
                </value>
                <value>
                    <fullName>CRD Credit</fullName>
                </value>
                <value>
                    <fullName>DMO General Demolition</fullName>
                </value>
                <value>
                    <fullName>DOR Doors</fullName>
                </value>
                <value>
                    <fullName>DRY Drywall</fullName>
                </value>
                <value>
                    <fullName>ELE Electrical</fullName>
                </value>
                <value>
                    <fullName>ELS Electrical Special Systems</fullName>
                </value>
                <value>
                    <fullName>EQU Heavy Equipment</fullName>
                </value>
                <value>
                    <fullName>EXC Excavation</fullName>
                </value>
                <value>
                    <fullName>FCC Floor Covering Carpet</fullName>
                </value>
                <value>
                    <fullName>FCR Floor Covering Resilient</fullName>
                </value>
                <value>
                    <fullName>FCS Floor Covering Stone</fullName>
                </value>
                <value>
                    <fullName>FCT Floor Covering Ceramic Tile</fullName>
                </value>
                <value>
                    <fullName>FCV Floor Covering Vinyl</fullName>
                </value>
                <value>
                    <fullName>FCW Floor Covering Wood</fullName>
                </value>
                <value>
                    <fullName>FEE Permits and Fees</fullName>
                </value>
                <value>
                    <fullName>FEN Fencing</fullName>
                </value>
                <value>
                    <fullName>FNC Finish Carpentry</fullName>
                </value>
                <value>
                    <fullName>FNH Finish Hardware</fullName>
                </value>
                <value>
                    <fullName>FPL Fireplaces</fullName>
                </value>
                <value>
                    <fullName>FPS Fire Protection Systems</fullName>
                </value>
                <value>
                    <fullName>FRM Framing &amp; Rough Carpentry</fullName>
                </value>
                <value>
                    <fullName>GLS Glass, Glazing, &amp; Storefronts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trade__c</fullName>
        <label>Trade</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X10_10_Allocation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>10% overhead and 10% profit.</description>
        <label>10/10 Allocation</label>
        <type>Checkbox</type>
    </fields>
    <label>Budget Line Item</label>
    <nameField>
        <displayFormat>BLI-{YYYY}{MM}{DD}-{00}</displayFormat>
        <label>Budget Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>